JSR 292 inlining causes crashes in methodHandleWalk.cpp

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • hs21
    • Affects Version/s: 7
    • Component/s: hotspot
    • b14
    • generic
    • generic
    • Not verified

        This is a follow-up to 6998541.

        Customers have observed that inlining some kinds of method handles tickles unexpected paths in methodHandleWalk.cpp.

        Known cases:

        - http://mail.openjdk.java.net/pipermail/mlvm-dev/2011-May/003060.html
        - http://mail.openjdk.java.net/pipermail/mlvm-dev/2011-May/003055.html
        - asSpreader adapters

        There should be "lose" calls on paths we don't expect, so the method handle walker can back out cleanly and fail the inlining.

              Assignee:
              Tom Rodriguez
              Reporter:
              John Rose
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: