7045513: JSR 292 inlining causes crashes in methodHandleWalk.cpp

Reviewed-by: jrose